Closed Bug 369227 Opened 18 years ago Closed 17 years ago

"ASSERTION: Backuping up twice; this should never be necessary" with floats and vertical scrollbar

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: roc)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file testcase
Loading the testcase triggers:

###!!! ASSERTION: Backuping up twice; this should never be necessary: '!forceBreakInContent', file /Users/jruderman/trunk/mozilla/layout/generic/nsBlockFrame.cpp, line 3074

This assertion was added in bug 343445.

http://quotes.burntelectrons.org/1892
Blocks: 369230
Flags: blocking1.9?
Attached patch fixSplinter Review
There are two parts to this fix:

1) The text frame "  A  " wants to try to place the following <span> after itself, just in case the span collapses completely into the text frame's trailing whitespace, even though the text frame's trailing soft break is beyond the available width. We need to fail to place the span and back up to the text frame's soft break. Problem is that up till now we haven't allowed potential breaks to be registered beyond the available width. This patch alters that, allowing us to record a break opportunity beyond the available width if there isn't already a (better) one recorded.

2) nsLineLayout::ClearOptionalBreakPosition needs to clear out the NEEDBACKUP flag so that nsBlockFrame::DoReflowInlineFrames doesn't assert, thinking that backup is required more often that it is.
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #254382 - Flags: superreview?(dbaron)
Attachment #254382 - Flags: review?(dbaron)
Comment on attachment 254382 [details] [diff] [review]
fix

r+sr=dbaron.

Please also change the assertion text from "Backuping up" to "Backing up".
Attachment #254382 - Flags: superreview?(dbaron)
Attachment #254382 - Flags: superreview+
Attachment #254382 - Flags: review?(dbaron)
Attachment #254382 - Flags: review+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: blocking1.9? → in-testsuite?
Resolution: --- → FIXED
Depends on: 375827
Crashtest checked in.
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: