Bug 369227. Record the first soft break beyond the available width, if there isn't one within the available width. r+sr=dbaron